# SeqSee

./: .gitignore  CHANGELOG.md  CITATION.cff  DEVELOPMENT.md  README.md  devenv.nix  example_input.json  flake.nix  pyproject.toml
csv/: Adams-classical-E3.csv  Adams-classical-Einfty.csv  Adams-motivic-E3.csv  Adams-motivic-E4.csv  Adams-motivic-E5.csv  Adams-motivic-E6.csv  Adams-motivic-Einfty.csv  algNovikov-E2.csv  algNovikov-E3.csv  algNovikov-E4.csv  algNovikov-E5.csv  algNovikov-Einfty.csv  algNovikov-h1periodic-E0.csv  algNovikov-h1periodic-Einfty.csv
html/: Adams-classical-E2.html  Adams-classical-E3.html  Adams-classical-Einfty.html  Adams-classical.html  Adams-motivic-E2-machine.html  Adams-motivic-E2.html  Adams-motivic-E3.html  Adams-motivic-E4.html  Adams-motivic-E5.html  Adams-motivic-E6.html  Adams-motivic-Einfty.html  Adams-motivic.html  algNovikov-E2.html  algNovikov-E3.html  algNovikov-E4.html  algNovikov-E5.html  algNovikov-Einfty.html  algNovikov-h1periodic-E0.html  algNovikov-h1periodic-Einfty.html  algNovikov-machine.html  algNovikov.html  cmotivic.html  curves.html  dark_collection.html  dark_theme.html  example1.html  example2.html  example3.html  example4.html  example5.html  example6.html  hidden_nodes.html  issue_6.html  single_node.html  trivial.html
json/: Adams-classical-E2.json  Adams-classical-E3.json  Adams-classical-Einfty.json  Adams-classical.json  Adams-motivic-E2-machine.json  Adams-motivic-E2.json  Adams-motivic-E3.json  Adams-motivic-E4.json  Adams-motivic-E5.json  Adams-motivic-E6.json  Adams-motivic-Einfty.json  Adams-motivic.json  algNovikov-E2.json  algNovikov-E3.json  algNovikov-E4.json  algNovikov-E5.json  algNovikov-Einfty.json  algNovikov-h1periodic-E0.json  algNovikov-h1periodic-Einfty.json  algNovikov-machine.json  algNovikov.json  cmotivic.json  curves.json  dark_collection.json  example3.json  example4.json  example6.json  example_input2.json  hidden_nodes.json  issue_6.json  single_node.json
seqsee/: __init__.py  chart_internals.py  css.py  defaults.py  input_schema.json  jsonmaker.py  main.py  template.html.jinja
