[tool.poetry]
name = "SeqSee"
version = "0.1.0"
description = "A universal visualization tool for spectral sequences of all kinds"
authors = ["Joey Beauvais-Feisthauer <joeybf@wayne.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
compact-json = "^1"
jinja2 = "^3"
jsonschema = "^4"
pandas = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seqsee = 'seqsee.main:main'
jsonmaker = 'seqsee.jsonmaker:main'
