[tool.poetry]
name = "seqsee"
version = "0.2.0"
description = "A generic visualization tool for spectral sequence data"
authors = [
    "Joey Beauvais-Feisthauer <joeybf@wayne.edu>",
    "Dan Isaksen <isaksen@wayne.edu>",
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/JoeyBF/SeqSee"
repository = "https://github.com/JoeyBF/SeqSee"
documentation = "https://github.com/JoeyBF/SeqSee#readme"
keywords = [
    "spectral-sequence",
    "visualization",
    "mathematics",
    "topology",
    "html",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
]
packages = [{ include = "seqsee" }]

[tool.poetry.dependencies]
python = "^3.11"
compact-json = "^1"
jinja2 = "^3"
jsonschema = "^4"
pandas = "^2"
pydantic = "^2.11.4"
types-jsonschema = "^4.23.0.20241208"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seqsee = "seqsee.main:main"
seqsee-jsonmaker = "seqsee.jsonmaker:main"
seqsee-convert-all = "seqsee.convert_all:main"
